- Fixed OSB not logging messages.
- Fixed entity map script crash (@FezzedOne)