@@ -63,6 +63,7 @@
   "defaultColor": "#FFFFFFFF",
   
   "previewCommandFontSize": 8,
+  "previewCommandOffset": [4, 1],
 
   "modeColors": {
     "default": "white",
