@@ -2,7 +2,19 @@
   "general": ["/admin", "/help", "/naked", "/nick", "/played", "/pvp", "/reload", "/serverwhoami", "/suicide", "/whereami", "/who", "/whoami", "/w"],
   "admin": ["/ban", "/clearstagehand", "/disablespawning", "/enablespawning", "/kick", "/list", "/placedungeon", "/resetuniverseflags", "/serverreload", "/setspawnpoint", "/settileprotection", "/setuniverseflag", "/spawnitem", "/spawnliquid", "/spawnmonster", "/spawnnpc", "/spawnstagehand", "/spawntreasure", "/spawnvehicle", "/timewarp", "/unbanip", "/unbanuuiud", "/warp", "/whereis"],
   "debug": ["/boxes", "/cinema", "/clearboxes", "/clearcinematics", "/clearradiomessages", "/clearscannedobjects", "/completequest", "/debug", "/enabletech", "/entityeval", "/eval", "/failquest", "/fixedcamera", "/fullbright", "/giveessentialitem", "/gravity", "/maketechavailable", "/previewnewquest", "/previewquestcomplete", "/previewquestfailed", "/radiomessage", "/resetachievements", "/resetgravity", "/setgravity", "/startquest", "/statistic", "/togglelayer", "/upgradeship"],
-  "starextentions": ["/binds", "/breathing", "/guide", "/voice", "/swap", "/editor", "/identity", "/speech", "/nightvision", "/render"],
+  "starextentions": ["/binds", "/breathing", "/guide", "/voice", "/swap", "/editor", {
+    "command": "/identity",
+    "description": "Change your identity",
+    "subcommands": [{
+      "command": "set",
+      "description": "Set your identity",
+      "subcommands": ["facialHairType", "personalityArmOffset", "facialHairGroup", "hairType", "personalityArmIdle", "bodyDirectives", "gender", "color", "personalityHeadOffset", "hairGroup", "facialMaskDirectives", "species", "personalityIdle", "name", "facialMaskGroup", "facialHairDirectives", "emoteDirectives", "facialMaskType", "hairDirectives"]
+    }, {
+      "command": "get",
+      "description": "Get your identity",
+      "subcommands": ["facialHairType", "personalityArmOffset", "facialHairGroup", "hairType", "personalityArmIdle", "bodyDirectives", "gender", "color", "personalityHeadOffset", "hairGroup", "facialMaskDirectives", "species", "personalityIdle", "name", "facialMaskGroup", "facialHairDirectives", "emoteDirectives", "facialMaskType", "hairDirectives"]
+    }]
+  }, "/speech", "/nightvision", "/render"],
   "starcustomchat": ["/clearchat"],
   "custom": ["/hotreload"]
 }
