@@ -1,2 +1,3 @@
 - Fixed OSB not logging messages.
 - Fixed entity map script crash (@FezzedOne)
+- Nested commands support
